--- a/write/index.html
+++ b/write/index.html
@@ -11,7 +11,7 @@
                     maximum-scale = 1.0,
                     user-scalable = no"/>
 	<link rel="stylesheet" href="main.css">
-	<script src="jquery-2.1.3.min.js"></script>
+	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
 
