--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,user-scalable=no">
 	<title>Canvas汇总</title>
 <style>
 	ol li{
@@ -23,6 +24,8 @@
 	<li><a href="Canvas Image/demo.html" target="_block">照片模糊处理</a></li>
 	<li><a href="write/index.html" target="_block">慕课网写一个字</a></li>
 	<li><a href="nowTime.html" target="_block">慕课网炫丽时间</a></li>
+	<li><a href="characterImage/index.html" target="_block">字符图片</a></li>
+	<li><a href="imageProcessing/index.html" target="_block">图像处理</a></li>
 </ol>
 </body>
 </html>
