--- a/characterImage/index.html
+++ b/characterImage/index.html
@@ -55,6 +55,7 @@
 		<li>img-4</li>
 		<li>img-5</li>
 		<li>img-6</li>
+		<li>img-7</li>
 	</ol>
 	<p style="text-align: center;">点击上面切换图片，字符图片在最下面</p>
 	<div style="text-align: center;font-size: 30px;">
